--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -10,6 +10,8 @@ RUN npm ci
 
 RUN npm run build
 
+RUN CI=true npm test
+
 FROM nginx:1.20-alpine
 
 COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
