--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  server:
+    image: todo-backend
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3001:3001
+    environment: 
+      - MONGO_URL=mongodb://the_username:the_password@mongo/the_database
+      - REDIS_URL=//redis-db
+    container_name: todo-backend
+
+  debug-helper:
+    image: busybox
+
   mongo:
     image: mongo
     ports:
@@ -11,13 +28,15 @@ services:
       MONGO_INITDB_DATABASE: the_database
     volumes: 
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-  
+    container_name: mongo-db
+
   redis:
     image: redis
     ports: 
       - 6379:6379
     volumes:
     - ./redis_data:/data
+    container_name: redis-db
 
 volumes:
   mongo_data:
