--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -3,14 +3,26 @@ version: '3.8'
 services:
   frontend:
     image: todo-frontend
+    environment: 
+      - REACT_APP_BACKEND_URL=http://localhost:8080/api/
     build:
       context: ./todo-frontend
       dockerfile: dev.Dockerfile
     volumes:
       - ./todo-frontend:/usr/src/app
-    ports:
-      - 3000:3000
     container_name: todo-frontend
+
+  server:
+    image: todo-backend
+    environment: 
+    - MONGO_URL=mongodb://the_username:the_password@mongo/the_database
+    - REDIS_URL=//redis
+    build:
+      context: ./todo-backend
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./todo-backend:/usr/src/app
+    container_name: todo-backend
 
   nginx:
     image: nginx:1.20.1
@@ -19,4 +31,27 @@ services:
     ports:
       - 8080:80
     container_name: reverse-proxy
+
+  mongo:
+    image: mongo
+    ports:
+     - 3456:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes: 
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+    container_name: mongo
+
+  redis:
+    image: redis
+    ports: 
+      - 6379:6379
+    volumes:
+    - ./todo-backend/redis_data:/data
+    container_name: redis
+
+volumes:
+  mongo_data:
   
