--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -15,5 +15,14 @@ http {
       # Requests are directed to http://localhost:3000
       proxy_pass http://todo-frontend:3000;
     }
+
+    # Requests starting with /api/ are handled
+    location /api/ {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      
+      proxy_pass http://todo-backend:3001/;
+    }
   }
 }
