--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   server:
-    image: todo-backend
+    image: express-server
     build:
       context: .
       dockerfile: dev.Dockerfile
@@ -12,8 +12,7 @@ services:
       - 3001:3001
     environment: 
       - MONGO_URL=mongodb://the_username:the_password@mongo/the_database
-      - REDIS_URL=//redis-db
-    container_name: todo-backend
+      - REDIS_URL=//redis
 
   debug-helper:
     image: busybox
@@ -28,7 +27,7 @@ services:
       MONGO_INITDB_DATABASE: the_database
     volumes: 
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-    container_name: mongo-db
+    container_name: mongo
 
   redis:
     image: redis
@@ -36,7 +35,7 @@ services:
       - 6379:6379
     volumes:
     - ./redis_data:/data
-    container_name: redis-db
+    container_name: redis
 
 volumes:
   mongo_data:
