Part 12 - Exercise 12.20 done

--- a/todo-app/todo-backend/Dockerfile
+++ b/todo-app/todo-backend/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:16
+
+ENV NODE_ENV=production
   
 WORKDIR /usr/src/app
 
@@ -8,4 +10,4 @@ RUN npm ci
 
 ENV DEBUG=playground:*
 
-CMD npm start
+CMD ["npm", "start"]
