--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -13,7 +13,9 @@ http {
       proxy_set_header Connection 'upgrade';
       
       # Requests are directed to http://localhost:3000
-      proxy_pass http://todo-frontend:3000;
+      
+      # proxy_pass http://todo-frontend:3000;
+      proxy_pass http://todo-frontend;
     }
 
     # Requests starting with /api/ are handled
