--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:16 AS build-stage
 
-ENV REACT_APP_BACKEND_URL=http://localhost:3001
+ENV NODE_ENV=production
+
+ENV REACT_APP_BACKEND_URL=http://localhost:8080/api/
 
 WORKDIR /usr/src/app
 
@@ -8,9 +10,9 @@ COPY . .
 
 RUN npm ci
 
-RUN npm run build
-
 RUN CI=true npm test
+
+RUN npm run build
 
 FROM nginx:1.20-alpine
 
